<resources>
    <string name="app_name">EMI Calculator</string>
    <string name="required_inputs">Required Inputs</string>
    <string name="load_amount">Load Amount</string>
    <string name="rate_of_interest">Rate Of Interest</string>
    <string name="no_of_installemnt">No. Of Installment</string>
    <string name="pre_payment">Pre-payment locking period</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="time_period">Time Period</string>
    <string name="err_loan_amount">Enter loan amount</string>
    <string name="err_interest">Enter rate of interest</string>
    <string name="err_installment">Enter no of installment</string>
    <string name="err_prepayment">Enter pre payment locking period</string>
    <string name="err_prepayment_month">Enter between 6 to below installation month</string>
    <string name="pre_payment_6">6</string>
    <string name="date_format">Date format</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="inst_no">inst no. :</string>
    <string name="inst_date">inst Date :</string>
    <string name="opening">Opening Balance</string>
    <string name="emi">EMI</string>
    <string name="interest">Interest</string>
    <string name="principle">Principle</string>
</resources>
