<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.view.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clInside"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_black_round_border"
        android:foregroundGravity="center"
        android:padding="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRequirements"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/required_inputs"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/load_amount"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tilLoanAmount"
            app:layout_constraintEnd_toStartOf="@id/tilLoanAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRequirements" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoanAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvLoan"
            app:layout_constraintTop_toBottomOf="@id/tvRequirements">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edLoanAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRateOfInterest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rate_of_interest"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tilRateOfInterest"
            app:layout_constraintEnd_toStartOf="@id/tilRateOfInterest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilLoanAmount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRateOfInterest"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvRateOfInterest"
            app:layout_constraintTop_toBottomOf="@id/tilLoanAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edRateOfInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNoOfInstallment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_of_installemnt"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@id/tilNoOfInstallment"
            app:layout_constraintEnd_toStartOf="@id/tilNoOfInstallment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilRateOfInterest" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNoOfInstallment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvNoOfInstallment"
            app:layout_constraintTop_toBottomOf="@id/tilRateOfInterest">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNoOfInstallment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPrePayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pre_payment"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/tilPrePayment"
            app:layout_constraintEnd_toStartOf="@id/tilPrePayment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNoOfInstallment" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrePayment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPrePayment"
            app:layout_constraintTop_toBottomOf="@id/tilNoOfInstallment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPrePayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/pre_payment_6"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPrePayment"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_20ssp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSubmit"
            app:layout_constraintTop_toBottomOf="@id/tilPrePayment"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTime"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_20ssp"
            android:text="@string/time_period"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPrePayment"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>