<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spnDate"
        android:text="@string/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvDateFormat"
        android:layout_toEndOf="@+id/tvDateFormat"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="12dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDateFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        android:textColor="@android:color/black"
        android:text="@string/date_format"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvStartDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:paddingRight="5dp"
        android:layout_toRightOf="@+id/tvStart"
        android:layout_toEndOf="@+id/tvStart"
        android:layout_below="@+id/tvDateFormat"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/tvDateFormat"
        android:layout_alignLeft="@+id/tvDateFormat"
        android:layout_alignStart="@+id/tvDateFormat"
        android:textSize="@dimen/_15ssp"
        android:textColor="@android:color/black"
        android:text="@string/start_date"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEndDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:paddingRight="5dp"
        android:layout_toRightOf="@+id/tvEnd"
        android:layout_toEndOf="@+id/tvEnd"
        android:layout_below="@+id/tvStart"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEnd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/tvStart"
        android:layout_alignLeft="@+id/tvDateFormat"
        android:layout_alignStart="@+id/tvDateFormat"
        android:textSize="@dimen/_15ssp"
        android:textColor="@android:color/black"
        android:text="@string/end_date"
        />



</RelativeLayout>
